# housedb

./: .gitignore  .project  CPPLINT.cfg  Dockerfile  Doxyfile  LICENSE.md  README.md  all.xml  build.gradle  db.sql  docker-compose.yml  gen_api_doc.sh  install.sql  install_tests.sql  license_short.tmpl  log.txt  openapi.xslt  openapi.yml  openapi_xml.xslt  settings.gradle
.github/workflows/: build_and_release.yml  initial_db_setup.sql  test.yml
api/: build.gradle
api/src/main/kotlin/: Entry.kt
api/src/main/kotlin/controllers/: LocationController.kt
authdatabase/: build.gradle
authdatabase/src/main/resources/db/migration/V1/: V2022.03.14__initial.sql
cppapi/: CMakeLists.txt  Dockerfile  cppcheck.cppcheck  passwd  test_config.json
cppapi/src/: CMakeLists.txt
cppapi/src/api/: CMakeLists.txt  app.h  auth.h  common.h  config.cpp  config.h  database.cpp  database.h  locations.cpp  locations.h  main.cpp  request_logger.h  timeseries.cpp  timeseries.h
cppapi/src/api/dao/: CMakeLists.txt  locations_dao.cpp  locations_dao.h  timeseries_dao.cpp  timeseries_dao.h  user_dao.cpp  user_dao.h
cppapi/src/api/dao/sqlpp/: CPPLINT.cfg  housedb.h
cppapi/src/api/dto/: CMakeLists.txt  location_dto.cpp  location_dto.h  timeseries_dto.cpp  timeseries_dto.h  user_dto.cpp  user_dto.h
cppapi/src/auth/: CMakeLists.txt  app.h  auth.h  authdb.h  config.h  database.cpp  database.h  main.cpp
cppapi/src/auth/static/: main.css
cppapi/src/auth/templates/: base.html  index.html
cppapi/src/dao/: CMakeLists.txt  locations_dao.cpp  locations_dao.h  timeseries_dao.cpp  timeseries_dao.h
cppapi/src/dao/sqlpp/: housedb.h  locations_tab.cpp  locations_tab.h
cppapi/src/dto/: CMakeLists.txt  location_dto.cpp  location_dto.h  timeseries_dto.cpp  timeseries_dto.h
cppapi/src/headers/: CPPLINT.cfg  api_exception.h  optionparser.h  page_helper.h  request_logger.h  string_encoding.h
cppapi/src/ssl/: sslpp.cpp  sslpp.h
database/: .project  build.gradle
database/src/main/java/db/migration/: NoConversionFound.java  R__unit_conversions.java
database/src/main/java/db/migration/units/: R__unit_conversions.java
database/src/main/java/net/hobbyscience/: ConversionGraph.java
database/src/main/java/net/hobbyscience/database/: Conversion.java  ConversionMethod.java  Parameter.java  Unit.java
database/src/main/java/net/hobbyscience/housedb/: HouseDb.java
database/src/main/java/net/hobbyscience/math/: Equations.java
database/src/main/resources/db/migration/: R__a_locations.sql  R__a_timeseries.sql  R__security.sql  R__units.sql  V2.1.0__users.sql  V2.1.4__location_improvement.sql  V3.0.0__rearrange_packages.sql  V3.0.2__fix_location_view.sql  V3.2.0__timeseries_interval_offset.sql  V4.1.1__fix_location_name_constraint.sql  V4.2.0__remove_store_read_data_functions.sql  V4.3.0__add_units_to_tsv.sql  V4.4.0__units_and_conversions.sql  V4.4.1__unit_reference_on_parameter.sql  afterClean.sql  afterMigrate.sql  afterMigrate__bootstrap.sql
database/src/main/resources/db/migration/Locations/: R__a_locations.sql
database/src/main/resources/db/migration/Security/: R__security.sql
database/src/main/resources/db/migration/TimeSeries/: R__a_timeseries.sql
database/src/main/resources/db/migration/Units/: R__units.sql
database/src/main/resources/db/migration/V1/: V1.0.0__initial_database.sql  V1.1.0__merge_zone_into_location.sql
database/src/main/resources/db/migration/V2/: V2.0.0__remove_old_functions.sql  V2.0.1__remove_zone_table.sql  V2.1.0__users.sql  V2.1.1__location_name_uniqueness.sql  V2.1.2__added_create_permission.sql  V2.1.3__lowercase_constraintnames.sql  V2.1.4__location_improvement.sql
database/src/main/resources/db/migration/V3/: V3.0.0__rearrange_packages.sql  V3.0.1__drop_can_perform.sql  V3.0.2__fix_location_view.sql  V3.1.0__modify_user_permissions.sql  V3.2.0__timeseries_interval_offset.sql
database/src/main/resources/db/migration/V4/: V4.0.0__rename_tsv_table.sql  V4.1.0__tsv_view.sql  V4.1.1__fix_location_name_constraint.sql  V4.2.0__remove_store_read_data_functions.sql  V4.3.0__add_units_to_tsv.sql  V4.4.0__units_and_conversions.sql  V4.4.1__unit_reference_on_parameter.sql  V4.4.2__fix_integer_size_of_parameters.sql  V4.5.0__scale_surrogate_keys.sql  V4.5.1__fix_location_uniqueness.sql
database/src/main/resources/db/migration/V5/: V5.0.0__location_coordinates.sql  V5.0.1__api_key.sql
database/src/main/resources/db/migration/Views/: R__catalog.sql  R__locations.sql  R__timeseries.sql
database/src/main/resources/db/migration/after/: afterClean.sql  afterMigrate.sql  (+1 more)
database/src/test/java/db/migration/: UnitConversionTest.java
database/src/test/java/net/hobbyscience/: SimpleInfixCalculator.java
database/src/test/sql/: install_tests.sql  location_test.sql  remove_tests.sql  security_test.sql  timeseries_test.sql  units_test.sql
gardendbapp/: build.gradle
gardendbapp/src/main/: AndroidManifest.xml
gardendbapp/src/main/res/layout/: activity_login.xml
gardendbapp/src/main/res/values/: strings.xml  themes.xml
gardendbapp/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
housedb-dao/: .classpath  .project  build.gradle
src/: permissions.sql  schema.sql
src/data/: parameters.sql  time.sql  types.sql
src/functions/: timeseries.sql
src/main/resources/db/migration/: R__a_timeseries.sql  R__permissions.sql  V1.0.0__initial_database.sql  V1.1.0__merge_zone_into_location.sql
src/test/: timeseries_test.sql
src/test/sql/: install_tests.sql  location_test.sql  timeseries_test.sql
test_config/: api.json  api_local.json
test_config/authelia/: configuration.yml  db.sqlite3  users_database.yml
test_config/certs/: ca.cert.pem  ca.cert.srl  ca.key  jwt.csr  jwt.key  jwt.pem
z-api/: .project  build.gradle
z-api/src/main/deb/: postInstall.sh  preInstall.sh  preRm.sh
z-api/src/main/docker/: Dockerfile
z-api/src/main/kotlin/: Entry.kt
z-api/src/main/kotlin/controllers/: LocationController.kt  TimeSeriesController.kt
z-api/src/main/resources/docker/: Dockerfile
z-api/src/main/systemd/: housedb-api.service
(+60 files in other folders)
